--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -31,3 +31,20 @@ html, body {
     margin-bottom:10px;
 }
 
+@media (max-width: 1024px) {
+  section #About{
+    height: 100%;
+    overflow: auto;
+  }
+}
+
+@media (max-width: 768px) {
+  section{
+    height: 100%;
+    overflow: auto;
+  }
+  .section-title {
+    margin-top: 0px;
+    font-size: 2.5rem;
+  }
+}
