change style and add some isotope gallery

--- a/frontend/src/components/contact/contact.scss
+++ b/frontend/src/components/contact/contact.scss
@@ -43,8 +43,8 @@ $font-text: "Inika", serif;
     animation: fadeInBottom 2s forwards;
     img {
       width: 90%;
-      max-width: 500px;
-      // margin-top: 20%;
+      max-width: 400px;
+      margin-top: 20%;
     }
     p {
       font-family: $font-text;
