fix db destination

--- a/backend/src/views/create.ejs
+++ b/backend/src/views/create.ejs
@@ -16,7 +16,7 @@
         <label for="title">Title:</label>
         <input type="text" name="title" id="title" required />
         <label for="des">Description:</label>
-        <input type="text" name="des" id="des" required />
+        <input type="text" name="description" id="des" required />
         <label for="images">Upload image:</label>
         <input
           type="file"
