--- a/backend/src/views/partials/nav.ejs
+++ b/backend/src/views/partials/nav.ejs
@@ -5,7 +5,7 @@
     </div>
     <ul>
         <li><a href="/">Art List</a></li>
-        <li><a href="/">Add Art</a></li>
+        <li><a href="/arts/add">Add Art</a></li>
         <li><a href="/">Messages</a></li>
     </ul>
 </nav>
