--- a/backend/src/views/partials/nav.ejs
+++ b/backend/src/views/partials/nav.ejs
@@ -1,11 +1,11 @@
-<nav>
+<nav class="navbar">
     <div class="site-title">
-        <a href="/">Admin Hub</a>
-        <p>Art Display Management System</p>
+        <a href="/" class="logo">Admin Hub</a>
+        <p class="site-description">Art Display Management System</p>
     </div>
-    <ul>
-        <li><a href="/">Art List</a></li>
-        <li><a href="/arts/add">Add Art</a></li>
-        <li><a href="/">Messages</a></li>
+    <ul class="nav-links">
+        <li><a href="/" class="nav-link">Art List</a></li>
+        <li><a href="/arts/add" class="nav-link">Add Art</a></li>
+        <li><a href="/messages" class="nav-link">Messages</a></li>
     </ul>
 </nav>
