--- a/backend/public/styles.css
+++ b/backend/public/styles.css
@@ -179,3 +179,69 @@ body {
 .add-art button:hover {
     background-color: #555;
 }
+
+/* Edit Form*/
+.edit-art {
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.edit-art h2 {
+    text-align: center;
+}
+
+.edit-art form {
+    display: flex;
+    flex-direction: column;
+}
+
+.edit-art label {
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.edit-art select,
+.edit-art input[type="text"],
+.edit-art input[type="file"],
+.edit-art input[type="radio"] {
+    margin-bottom: 15px;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.edit-art input[type="file"] {
+    padding: 5px;
+    height: auto;
+}
+
+.edit-art input[type="radio"] {
+    margin-right: 5px;
+}
+
+.edit-art .image-preview {
+    margin-bottom: 15px;
+}
+
+.edit-art .image-preview img {
+    max-width: 100px;
+    height: auto;
+    margin-right: 10px;
+}
+
+.edit-art button {
+    padding: 10px;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.edit-art button:hover {
+    background-color: #555;
+}
