--- a/backend/public/styles.css
+++ b/backend/public/styles.css
@@ -100,6 +100,26 @@ body {
     text-decoration: underline;
 }
 
+.category-select {
+    margin-left: 20px;
+    padding: 8px 30px 8px 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #fff;
+    color: #333;
+    font-size: 16px;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: url('data:image/svg+xml;utf8,<svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/><path d="M0 0h24v24H0z" fill="none"/></svg>');
+    background-repeat: no-repeat;
+    background-position-x: calc(100% - 10px);
+    background-position-y: center;
+}
+
+.category-select:hover, .category-select:focus {
+    border-color: #555;
+}
 
 .nav-link:hover {
     color: #555;
