--- a/backend/public/styles.css
+++ b/backend/public/styles.css
@@ -36,7 +36,7 @@ body {
 }
 
 .nav-links {
-    width: 20vw;
+    width: 40vw;
     margin-inline: auto;
     list-style: none;
     display: flex;
@@ -119,6 +119,14 @@ body {
 
 .category-select:hover, .category-select:focus {
     border-color: #555;
+}
+
+/* featured filter */
+.checkbox-container {
+   margin-left: 20px;
+}
+.checkbox-label {
+    font-size: 1.5rem;
 }
 
 .nav-link:hover {
