--- a/backend/public/styles.css
+++ b/backend/public/styles.css
@@ -319,3 +319,39 @@ body {
 .edit-art button:hover {
     background-color: #555;
 }
+
+/* Messages style */
+.message-container {
+    max-width: 800px;
+    margin: 0 auto;
+  }
+  
+  .message-title {
+    text-align: center;
+    font-size: 2rem;
+    margin-block: 3rem;
+  }
+
+  .message-table {
+    width: 100%;
+    border-collapse: collapse;
+  }
+  
+  .message-table th, .message-table td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+  }
+  
+  .message-table th {
+    background-color: #f2f2f2;
+  }
+  
+  .attachment-image {
+    max-width: 100px;
+    max-height: 100px;
+    display: block;
+    margin: auto;
+  }
+
+  
