--- a/frontend/src/components/gallery/gallery.scss
+++ b/frontend/src/components/gallery/gallery.scss
@@ -23,6 +23,10 @@ $font-text: "Inika", serif;
         color: gray;
         cursor: pointer;
       }
+      &.selected {
+        font-weight: bold;
+        color: rgb(11, 90, 11);
+      }
     }
   }
 
