add styling for model screen and 2 more properties for data

--- a/backend/src/views/index.ejs
+++ b/backend/src/views/index.ejs
@@ -43,6 +43,8 @@
           <tr>
             <th>Title</th>
             <th>Category</th>
+            <th>Medium</th>
+            <th>Dimension</th>
             <th>Description</th>
             <th>Featured</th>
             <th>Images</th>
@@ -54,6 +56,8 @@
           <tr>
             <td><%= art.title %></td>
             <td><%= art.category %></td>
+            <td><%= art.medium %></td>
+            <td><%= art.dimension %></td>
             <td><%= art.description %></td>
             <td><%= art.featured ? "Yes" : "No" %></td>
             <td>
