--- a/backend/src/views/create.ejs
+++ b/backend/src/views/create.ejs
@@ -15,8 +15,16 @@
         </select>
         <label for="title">Title:</label>
         <input type="text" name="title" id="title" required />
+
+        <label for="medium">Medium:</label>
+        <input type="text" name="medium" id="medium" />
+
+        <label for="dimension">Dimension:</label>
+        <input type="text" name="dimension" id="dimension" />
+
         <label for="des">Description:</label>
         <input type="text" name="description" id="des" required />
+        
         <label for="images">Upload image:</label>
         <input
           type="file"
