--- a/backend/src/views/details.ejs
+++ b/backend/src/views/details.ejs
@@ -19,6 +19,13 @@
             <label for="title">Title:</label>
             <input type="text" name="title" id="title" value="<%= art.title %>" required />
             <label for="des">Description:</label>
+
+            <label for="medium">Medium:</label>
+            <input type="text" name="medium" id="medium" value="<%= art.medium %>" />
+
+            <label for="dimension">Dimension:</label>
+            <input type="text" name="dimension" id="dimension" value="<%= art.dimension %>" />
+
             <input type="text" name="description" id="des" value="<%= art.description %>" required />
             <label>Images:</label>
             <div class="image-preview">
