--- a/frontend/src/components/gallery/projectDetails.scss
+++ b/frontend/src/components/gallery/projectDetails.scss
@@ -1,3 +1,6 @@
+$font-main: "IBM Plex Sans", sans-serif;
+$font-text: "Inika", serif;
+
 .modal {
   position: fixed;
   top: 0;
@@ -9,6 +12,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1000;
+  font-family: $font-text;
 }
 
 .modal-content {
@@ -22,26 +26,25 @@
   overflow-y: auto;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   animation: slideIn 0.3s ease-out;
+  display: flex;
+  flex-direction: column;
 }
 
-@keyframes slideIn {
-  from {
-    transform: translateY(-50px);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
+.modal-content > * {
+  margin-bottom: 10px;
+}
+
+.modal-content > *:last-child {
+  margin-bottom: 0;
 }
 
 .close-button {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 12px;
+  right: 12px;
   background: none;
   border: none;
-  font-size: 20px;
+  font-size: 25px;
   font-weight: bold;
   cursor: pointer;
   color: #aaa;
@@ -64,13 +67,27 @@ p {
   line-height: 1.5;
 }
 
-img {
-  width: 100%;
+hr {
+  margin: 10px 0;
+  border: none;
+  border-top: 1px solid #ccc;
+}
+
+.image-grid {
   max-width: 300px;
-  margin-top: 10px;
+  margin: 0 auto; 
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  gap: 10px;
+}
+
+.image-grid img {
+  max-width: 100%;
+  height: auto;
   border-radius: 4px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
 
 .modal-content::-webkit-scrollbar {
   width: 8px;
@@ -83,4 +100,37 @@ img {
 
 .modal-content::-webkit-scrollbar-thumb:hover {
   background-color: #aaa;
+}
+
+.details-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+.details-table td {
+  padding: 8px;
+  border-bottom: 1px solid #ddd;
+}
+
+.details-table td:first-child {
+  font-weight: bold;
+  width: 30%;
+}
+
+.details-table img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+@media (max-width: 1920px) {
+  .details-table img {
+    max-width: 100%;
+    max-height: 300px;
+    height: auto;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
 }
