--- a/backend/src/views/create.ejs
+++ b/backend/src/views/create.ejs
@@ -5,7 +5,7 @@
     <%- include('./partials/nav.ejs')%>
 
     <div class="add-art content">
-      <form action="/arts" method="post" >
+      <form action="/arts" method="post" enctype="multipart/form-data">
         <label for="category">Category:</label>
         <select name="category" id="category">
           <option value="sketch-painting">Sketch & Painting</option>
@@ -28,7 +28,7 @@
         <label for="images">Upload image:</label>
         <input
           type="file"
-          name="images[]"
+          name="images"
           id="images"
           multiple
           onChange="previewImages(event)"
