--- a/backend/src/views/details.ejs
+++ b/backend/src/views/details.ejs
@@ -30,7 +30,7 @@
             <label>Images:</label>
             <div class="image-preview">
                 <% art.images.forEach(image => { %>
-                    <img src="/<%= image %>" alt="Artwork Image" class="preview-image">
+                    <img src="/uploads/<%= image %>" alt="Artwork Image" class="preview-image">
                 <% }); %>
             </div>
             <div class="featured-options">
