--- a/backend/src/views/messages.ejs
+++ b/backend/src/views/messages.ejs
@@ -25,7 +25,7 @@
             <td>
               <% message.attachments.forEach(attachment => { %>
               <img
-                src="<%= attachment %>"
+                src="/messageUploads/<%= attachment %>"
                 alt="Attachment"
                 class="attachment-image"
                 class="attachment-image"
