--- a/frontend/src/components/gallery/gallery.scss
+++ b/frontend/src/components/gallery/gallery.scss
@@ -2,12 +2,53 @@ $font-main: "IBM Plex Sans", sans-serif;
 $font-text: "Inika", serif;
 
 .gallery-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+
+  // Pagination styles within the .gallery-section
+  .pagination {
+    margin-top: 20px;
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-items: center;
-    height: 100%;
-    
+    z-index: 2;
+
+    .pagination-list {
+      list-style-type: none;
+      padding: 0;
+      display: flex;
+      gap: 5px;
+
+      .pagination-item {
+        button {
+          background-color: #ffffff;
+          border: 1px solid #ccc;
+          color: #333;
+          padding: 8px 12px;
+          font-size: 14px;
+          cursor: pointer;
+          transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+
+          &:hover {
+            background-color: #f0f0f0;
+          }
+
+          &.active {
+            background-color: #007bff;
+            color: #ffffff;
+            border-color: #007bff;
+
+            &:hover {
+              background-color: #0056b3;
+            }
+          }
+        }
+      }
+    }
+  }
+
   .tabs {
     display: flex;
     gap: 10px;
@@ -18,7 +59,7 @@ $font-text: "Inika", serif;
       margin-block: 1em;
       padding-inline: 10px;
       border-right: 2px solid black;
-      &:hover{
+      &:hover {
         text-decoration: underline;
         color: gray;
         cursor: pointer;
@@ -39,7 +80,7 @@ $font-text: "Inika", serif;
     gap: var(--g);
     width: calc(3 * var(--s) + 2 * var(--g));
     aspect-ratio: 1;
-    grid-template-columns: repeat(4, auto);
+    grid-template-columns: repeat(4, 1fr);
   }
 
   .gallery > .img-container > img {
@@ -57,6 +98,7 @@ $font-text: "Inika", serif;
     justify-content: center;
     align-items: center;
     position: relative;
+
     .text-container {
       font-family: $font-text;
       opacity: 0;
